--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -1,7 +1,7 @@
 // stylelint-disable declaration-no-important
 
 // Margin and Padding
-@each $breakpoint in map-keys($grid-breakpoints) {
+@each $breakpoint in $utility-spacing-breakpoints {
     $bprule: breakpoint-designator($breakpoint);
 
     @include media-breakpoint-up($breakpoint) {
