--- a/scss/utilities/_typography.scss
+++ b/scss/utilities/_typography.scss
@@ -5,7 +5,7 @@
 .text-nowrap  { white-space: nowrap; }
 
 // Responsive alignment
-@each $breakpoint in map-keys($grid-breakpoints) {
+@each $breakpoint in $utility-text-align-breakpoints {
     $bprule: breakpoint-designator($breakpoint);
 
     @include media-breakpoint-up($breakpoint) {
