--- a/scss/utilities/_valign.scss
+++ b/scss/utilities/_valign.scss
@@ -1,6 +1,6 @@
 // stylelint-disable declaration-no-important
 
-@each $breakpoint in map-keys($grid-breakpoints) {
+@each $breakpoint in $utility-valign-breakpoints {
     $bprule: breakpoint-designator($breakpoint);
 
     @include media-breakpoint-up($breakpoint) {
