--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -145,18 +145,16 @@
 
 .input-group > .input-group-addon:not(:last-child) > .btn,
 .input-group > .input-group-addon:not(:last-child) > .input-group-text,
-.input-group > .input-group-addon:not(:last-child) > .btn-group > .btn,
+.input-group > .input-group-addon:not(:last-child) > .btn-check > .btn,
 .input-group > .input-group-addon:last-child > .btn:not(:last-child):not(.input-group-end),
-.input-group > .input-group-addon:last-child > .input-group-text:not(:last-child),
-.input-group > .input-group-addon:last-child > .btn-group > .btn {
+.input-group > .input-group-addon:last-child > .input-group-text:not(:last-child) {
     @include border-end-radius(0);
 }
 
 .input-group > .input-group-addon:not(:first-child) > .btn,
 .input-group > .input-group-addon:not(:first-child) > .input-group-text,
-.input-group > .input-group-addon:not(:first-child) > .btn-group > .btn,
+.input-group > .input-group-addon:not(:first-child) > .btn-check > .btn,
 .input-group > .input-group-addon:first-child > .btn:not(:first-child),
-.input-group > .input-group-addon:first-child > .input-group-text:not(:first-child),
-.input-group > .input-group-addon:first-child > .btn-group > .btn {
+.input-group > .input-group-addon:first-child > .input-group-text:not(:first-child) {
     @include border-start-radius(0);
 }
