--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -599,9 +599,9 @@ $btn-border-radius:         $border-radius !default;
 $btn-box-shadow:            inset 0 .125em .25em rgba($white, .25), 0 .125em .125em rgba($black, .075) !default;
 $btn-active-box-shadow:     inset 0 .25em .3125em rgba($black, .125) !default;
 
-$btn-focus-box-shadow-width:  .1875rem !default;
-$btn-focus-box-shadow-alpha:  .35 !default;
-$btn-focus-box-shadow:        0 0 0 $btn-focus-box-shadow-width rgba($component-active-bg, $btn-focus-box-shadow-alpha) !default;
+$btn-focus-box-shadow-size:  0 0 0 .1875rem !default;
+$btn-focus-box-shadow-alpha: .35 !default;
+$btn-focus-box-shadow:       $btn-focus-box-shadow-size rgba($component-active-bg, $btn-focus-box-shadow-alpha) !default;
 
 $btn-outline-bg:            transparent !default;
 
@@ -638,9 +638,9 @@ $input-box-shadow:              inset 0 .125em .125em rgba($black, .1) !default;
 $input-focus-color:             $input-color !default;
 $input-focus-bg:                $input-bg !default;
 $input-focus-border-color:      palette($primary, 300) !default;
-$input-focus-box-shadow-width:  .1875rem !default;
+$input-focus-box-shadow-size:   0 0 0 .1875rem !default;
 $input-focus-box-shadow-alpha:  .35 !default;
-$input-focus-box-shadow:        0 0 0 $input-focus-box-shadow-width rgba($component-active-bg, $input-focus-box-shadow-alpha) !default;
+$input-focus-box-shadow:        $input-focus-box-shadow-size rgba($component-active-bg, $input-focus-box-shadow-alpha) !default;
 
 $input-disabled-color:          $component-disabled-color !default;
 $input-disabled-bg:             $uibase-50 !default;
