Add doc warning message

--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -1,3 +1,6 @@
+<div class="v4-warning">
+    v4 is in Alpha! Not ready for Production!
+</div>
 <header class="navbar navbar-expand-lg navbar-dark print-hide cf-header">
     <a class="navbar-brand" href="{{ site.baseurl }}/" aria-label="CAST Figuration">
         <img src="{{ site.baseurl }}/assets/brand/figuration-outline.svg" class="navbar-brand-logo" alt="" />
