add form-inline support for custom-range

--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -271,7 +271,8 @@ textarea.form-control {
 
         // Allow folks to *not* use `.form-group`
         .form-control,
-        .custom-select {
+        .custom-select,
+        .custom-range {
             display: inline-block;
             width: auto; // Prevent labels from stacking above inputs in `.form-group`
             vertical-align: middle;
