--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -481,7 +481,7 @@ $transition-collapse-x: width .3s ease !default;
 
 // Component transitions
 $btn-transition:            color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
-$input-transition:          border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
+$input-transition:          background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
 $modal-transition:          transform .3s ease-out !default;
 $progress-bar-transition:   width .3s ease !default;
 $switch-control-transition: background-color .3s ease !default;
@@ -718,6 +718,27 @@ $custom-file-text: (
     en: "Browse"
 ) !default;
 
+// Custom range
+$custom-range-track-height:         .5rem !default;
+$custom-range-track-cursor:         pointer !default;
+$custom-range-track-bg:             $uibase-100 !default;
+$custom-range-track-border:         0 !default;
+$custom-range-track-border-radius:  $custom-range-track-height !default;
+$custom-range-track-box-shadow:     map-get($shadows, "i1") !default;
+
+$custom-range-thumb-width:                  1.125rem !default;
+$custom-range-thumb-height:                 $custom-range-thumb-width !default;
+$custom-range-thumb-bg:                     $component-active-bg !default;
+$custom-range-thumb-border:                 0 !default;
+$custom-range-thumb-border-radius:          50% !default;
+$custom-range-thumb-box-shadow:             map-get($shadows, "d1") !default;
+$custom-range-thumb-focus-box-shadow:       $input-focus-box-shadow !default;
+$custom-range-thumb-focus-box-shadow-width: .1875rem !default;
+$custom-range-thumb-active-bg:              palette($component-active-bg, 600) !default;
+$custom-range-thumb-disabled-bg:            $uibase-300 !default;
+
+$custom-range-height:               $custom-range-thumb-height + ($custom-range-thumb-focus-box-shadow-width * 2) !default;
+
 // Form validation
 // =====
 $form-feedback-margin-top:      $form-text-margin-top !default;
@@ -749,7 +770,7 @@ $switch-active-indicator-box-shadow:    $btn-active-box-shadow !default;
 // =====
 $progress-height:               1rem !default;
 $progress-font-size:            ($font-size-base * .75) !default;
-$progress-bg:                   $uibase-50 !default;
+$progress-bg:                   $uibase-100 !default;
 $progress-border-radius:        $border-radius !default;
 $progress-box-shadow:           inset 0 .125rem .125rem rgba($black, .1) !default;
 $progress-bar-color:            $white !default;
@@ -1089,13 +1110,13 @@ $modal-lg-breakpoint:           lg !default; // The minimum breakpoint to allow 
 // =====
 $slider-horizontal-height:          1.25rem !default;
 $slider-horizontal-margin:          .75rem !default;
-$slider-horizontal-track-height:    ($slider-horizontal-height / 2) !default;
+$slider-horizontal-track-height:    .5rem !default;
 $slider-horizontal-track-margin:    (($slider-horizontal-height - $slider-horizontal-track-height) / 2) !default;
 
 $slider-vertical-width:             1.25rem !default;
 $slider-vertical-height:            200px !default;
 $slider-vertical-margin:            .75rem !default;
-$slider-vertical-track-width:       ($slider-vertical-width / 2) !default;
+$slider-vertical-track-width:       .5rem !default;
 $slider-vertical-track-margin:      (($slider-vertical-width - $slider-vertical-track-width) / 2) !default;
 
 $slider-thumb-width:                1.25rem !default;
@@ -1103,11 +1124,13 @@ $slider-thumb-height:               1.25rem !default;
 $slider-thumb-border-radius:        50% !default;
 
 $slider-thumb-min-bg:               $primary !default;
-$slider-thumb-min-hover-bg:         palette($primary, 600) !default;
+$slider-thumb-min-focus-box-shadow: $input-focus-box-shadow-size rgba($slider-thumb-min-bg, $input-focus-box-shadow-alpha) !default;
+$slider-thumb-min-active-bg:        palette($primary, 600) !default;
 $slider-thumb-max-bg:               $danger !default;
-$slider-thumb-max-hover-bg:         palette($danger, 600) !default;
+$slider-thumb-max-focus-box-shadow: $input-focus-box-shadow-size rgba($slider-thumb-max-bg, $input-focus-box-shadow-alpha) !default;
+$slider-thumb-max-active-bg:        palette($danger, 600) !default;
 
-$slider-track-bg:                   $uibase-50 !default;
+$slider-track-bg:                   $uibase-100 !default;
 $slider-track-border-radius:        $border-radius !default;
 
 $slider-selection-bg:               $uibase-300 !default;
