--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -113,6 +113,7 @@
             &:focus-within, // Firefox workaround
             &:focus {
                 ~ .custom-file-label {
+                    border-color: $color;
                     box-shadow: $input-focus-box-shadow-size rgba($color, $input-focus-box-shadow-alpha);
                 }
             }
