--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -709,6 +709,7 @@ $custom-radio-radius:               50% !default;
 $custom-radio-checked-icon:         url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='%23fff'/%3E%3C/svg%3E") !default;
 
 // Custom select
+$custom-select-indicator-offset:    .5rem !default;
 $custom-select-indicator-padding:   .75rem !default; // Extra padding to account for the presence of the background-image based indicator
 $custom-select-indicator-size:      8px 10px !default; // In pixels because image dimensions
 $custom-select-indicator:           url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23333' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") !default;
