--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -13,6 +13,8 @@
     > .custom-file {
         position: relative;  // Needed for z-index on focus/active state
         flex: 1 1 auto;
+        // Add width 1% and flex-basis auto to ensure that button will not wrap out
+        // the column. Applies to IE Edge+ and Firefox. Chrome does not require this.
         width: 1%;
         margin-bottom: 0;
         margin-left: -$input-border-width;
@@ -141,9 +143,9 @@
 // border-radius values when extending. They're more specific than we'd like
 // with the `.input-group >` part, but without it, we cannot override the sizing.
 
-.input-group > .input-group-addon:not(:last-child) > .btn,
-.input-group > .input-group-addon:not(:last-child) > .input-group-text,
-.input-group > .input-group-addon:not(:last-child) > .btn-check > .btn,
+.input-group > .input-group-addon:not(:last-child) > .btn:not(.input-group-end),
+.input-group > .input-group-addon:not(:last-child) > .input-group-text:not(.input-group-end),
+.input-group > .input-group-addon:not(:last-child) > .btn-check:not(.input-group-end) > .btn,
 .input-group > .input-group-addon:last-child > .btn:not(:last-child):not(.input-group-end),
 .input-group > .input-group-addon:last-child > .input-group-text:not(:last-child) {
     @include border-end-radius(0);
