`.custom-file` inherit border color for internal border

--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -323,8 +323,7 @@
         }
 
         &::after {
-            border-color: $input-focus-border-color;
-            border-left-color: $input-border-color;
+            border-color: inherit;
         }
     }
 
