--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -105,7 +105,7 @@
             ~ .custom-file-label {
                 border-color: $color;
 
-                &::before { border-color: inherit; }
+                &::after { border-color: inherit; }
             }
 
             ~ .#{$state}-feedback,
