`custom-control` fix some heights and positions to use a `font-size` not unitless `line-height`

--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -8,7 +8,7 @@
 .custom-control {
     position: relative;
     display: block;
-    min-height: (1rem * $line-height-base);
+    min-height: ($font-size-base * $line-height-base);
     padding-left: $custom-control-gutter;
 }
 
@@ -69,7 +69,7 @@
     // Background (color and border)
     &::before {
         position: absolute;
-        top: (($line-height-base - $custom-control-indicator-size) / 2);
+        top: (($font-size-base * $line-height-base - $custom-control-indicator-size) / 2);
         left: -$custom-control-gutter;
         display: block;
         width: $custom-control-indicator-size;
@@ -85,7 +85,7 @@
     // Foreground (icon)
     &::after {
         position: absolute;
-        top: (($line-height-base - $custom-control-indicator-size) / 2);
+        top: (($font-size-base * $line-height-base - $custom-control-indicator-size) / 2);
         left: -$custom-control-gutter;
         display: block;
         width: $custom-control-indicator-size;
@@ -156,7 +156,7 @@
 
         // Thumb
         &::before {
-            top: (($line-height-base - $custom-switch-thumb-height) / 2);
+            top: (($font-size-base * $line-height-base - $custom-switch-thumb-height) / 2);
             z-index: 1; // Move above the track
             width: $custom-switch-thumb-width;
             height: $custom-switch-thumb-height;
@@ -168,7 +168,7 @@
 
         // Track
         &::after {
-            top: (($line-height-base - ($custom-switch-track-height-ratio * $custom-switch-thumb-height)) / 2);
+            top: (($font-size-base * $line-height-base - ($custom-switch-track-height-ratio * $custom-switch-thumb-height)) / 2);
             width: $custom-switch-width;
             height: $custom-switch-track-height-ratio * $custom-switch-thumb-height;
             background-color: $custom-switch-track-bg;
