--- a/scss/component/_close.scss
+++ b/scss/component/_close.scss
@@ -6,15 +6,15 @@
     color: $close-color;
     text-decoration: none;
     text-shadow: $close-text-shadow;
-    opacity: .5;
+    opacity: $close-opacity;
 
     &:not(:disabled):not(.disabled) {
         cursor: pointer;
 
         @include hover-focus {
-            color: $close-color;
+            color: $close-hover-color;
             text-decoration: none;
-            opacity: .75;
+            opacity: $close-hover-opacity;
         }
     }
 }
