--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -279,7 +279,7 @@ img {
     border-style: none; // Remove the border on images inside links in IE 10-.
 }
 
-svg:not(:root) {
+svg {
     overflow: hidden; // Hide the overflow in IE
     vertical-align: middle;
 }
