--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -304,9 +304,11 @@ $font-family-base:          $font-family-sans-serif !default;
 $font-size-base:    1rem !default;
 $line-height-base:  1.5 !default;
 
+$font-weight-lighter:   lighter !default;
 $font-weight-light:     300 !default;
-$font-weight-normal:    normal !default;
-$font-weight-bold:      bold !default;
+$font-weight-normal:    400 !default;
+$font-weight-bold:      700 !default;
+$font-weight-bolder:    bolder !default;
 $font-weight-base:      $font-weight-normal !default;
 
 $font-size-h1:  ($font-size-base * 2.5) !default;
