--- a/docs/assets/css/docs-rtl.css
+++ b/docs/assets/css/docs-rtl.css
@@ -6,7 +6,7 @@
   width: 12em;
   max-width: 100%;
   font-size: 1rem;
-  font-weight: bold;
+  font-weight: 700;
   color: #000;
   text-align: center;
   background: #eff1f3;
@@ -22,7 +22,7 @@
 
 .v4-warning {
   padding: .25rem 1rem;
-  font-weight: bold;
+  font-weight: 700;
   text-align: center;
   background-color: #fbda7b;
 }
@@ -103,7 +103,7 @@
   display: inline-block;
   margin-top: -.25rem;
   font-size: 1.5rem;
-  font-weight: bold;
+  font-weight: 700;
   line-height: .75;
 }
 
@@ -177,7 +177,7 @@
 
 .jumbotron-home h1,
 .jumbotron-home h2 {
-  font-weight: bold;
+  font-weight: 700;
   color: #fff;
 }
 
@@ -776,7 +776,7 @@ h4 > code {
 .algolia-autocomplete .algolia-docsearch-suggestion--category-header {
   padding: 2px 6px;
   margin-top: 0;
-  font-weight: bold;
+  font-weight: 700;
   color: #292929;
   background-color: #a0cbe3;
   border-top: 1px solid #858585;
@@ -1190,7 +1190,7 @@ h4 > code {
   position: absolute;
   top: 65px;
   right: 50px;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .container-viewport .tooltip,
@@ -1244,11 +1244,11 @@ h4 > code {
 
 .cf-example > [data-cfw="slider"] input {
   width: 3em;
-  font-weight: normal;
+  font-weight: 400;
 }
 
 .cf-example > [data-cfw="slider"] select {
-  font-weight: normal;
+  font-weight: 400;
 }
 
 @media (min-width: 62em) {
@@ -1570,12 +1570,12 @@ h4 > code {
 .cfw-table th small,
 .responsive-utilities th small {
   display: block;
-  font-weight: normal;
+  font-weight: 400;
   color: #999;
 }
 
 .responsive-utilities tbody th {
-  font-weight: normal;
+  font-weight: 400;
 }
 
 .responsive-utilities td {
@@ -1605,7 +1605,7 @@ h4 > code {
   display: block;
   padding: 1rem .5rem;
   font-size: 1rem;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 1.1;
   text-align: center;
   border-radius: .25rem;
